--- a/src/SerialLoops/Assets/Strings.resx
+++ b/src/SerialLoops/Assets/Strings.resx
@@ -3130,4 +3130,10 @@ To make this tooling more useful, we highly recommend applying the
     <value>A hack failed, but we weren't able to determine which one. Take a look at the logs for more information.
 All hacks have been rolled back to preserve state.</value>
   </data>
+  <data name="ReplaceAsAhx" xml:space="preserve">
+    <value>Replace as AHX</value><comment>"AHX" refers to an audio encoding format (as opposed to ADX, the standard format) specifically designed to encode voice files</comment>
+  </data>
+  <data name="HelpAhx" xml:space="preserve">
+    <value>AHX is the audio codec most of the voice files are encoded as as it's specifically designed to compress voice. However, our encoder can sometimes cause issues with the game, so we generally recommend encoding these lines with the standard ADX format. However, if you encounter issues with the regular Replace, try using this option!</value>
+  </data>
 </root>
