--- a/src/SerialLoops/Assets/Strings.resx
+++ b/src/SerialLoops/Assets/Strings.resx
@@ -3154,4 +3154,25 @@ All hacks have been rolled back to preserve state.</value>
   <data name="HelpAhx" xml:space="preserve">
     <value>AHX is the audio codec most of the voice files are encoded as as it's specifically designed to compress voice. However, our encoder can sometimes cause issues with the game, so we generally recommend encoding these lines with the standard ADX format. That said, if you encounter issues with the regular Replace, try using this option!</value>
   </data>
+  <data name="ProjectRenameText" xml:space="preserve">
+    <value>Rename Project</value>
+  </data>
+  <data name="ProjectDuplicateText" xml:space="preserve">
+    <value>Duplicate (Copy) Project</value>
+  </data>
+  <data name="ProjectDeleteText" xml:space="preserve">
+    <value>Delete Project</value>
+  </data>
+  <data name="ProjectDeleteConfirmTitle" xml:space="preserve">
+    <value>Delete This Project?</value>
+  </data>
+  <data name="ProjectDeleteConfirmText" xml:space="preserve">
+    <value>Are you sure you want to delete this project?</value>
+  </data>
+  <data name="ProjectDeleteFailedTitle" xml:space="preserve">
+    <value>Failure! Permanently Delete?</value>
+  </data>
+  <data name="ProjectDeleteFailedText" xml:space="preserve">
+    <value>Failed to move the project to the trash/recycle bin! Would you like to permanently delete the project instead? WARNING: This cannot be undone!</value>
+  </data>
 </root>
