--- a/src/SerialLoops/Assets/Strings.resx
+++ b/src/SerialLoops/Assets/Strings.resx
@@ -3157,4 +3157,10 @@ All hacks have been rolled back to preserve state.</value>
   <data name="SdlExceptionTooManyDevicesText" xml:space="preserve">
     <value>Sorry, but you currently have too many sound items open to open another one. Please close some and then try again.</value>
   </data>
+  <data name="BgmAdjustVolumeError" xml:space="preserve">
+    <value>Failed to adjust volume for background music. Please check the logs and file an issue if this reoccurs.</value>
+  </data>
+  <data name="BgmLoopErrorMessage" xml:space="preserve">
+    <value>Failed to adjust loop data for background music. Please check the logs and file an issue if this reoccurs.</value>
+  </data>
 </root>
