--- a/src/SerialLoops/Assets/Strings.resx
+++ b/src/SerialLoops/Assets/Strings.resx
@@ -3154,4 +3154,13 @@ All hacks have been rolled back to preserve state.</value>
   <data name="HelpAhx" xml:space="preserve">
     <value>AHX is the audio codec most of the voice files are encoded as as it's specifically designed to compress voice. However, our encoder can sometimes cause issues with the game, so we generally recommend encoding these lines with the standard ADX format. That said, if you encounter issues with the regular Replace, try using this option!</value>
   </data>
+  <data name="SdlExceptionTooManyDevicesText" xml:space="preserve">
+    <value>Sorry, but you currently have too many sound items open to open another one. Please close some and then try again.</value>
+  </data>
+  <data name="BgmAdjustVolumeError" xml:space="preserve">
+    <value>Failed to adjust volume for background music. Please check the logs and file an issue if this reoccurs.</value>
+  </data>
+  <data name="BgmLoopErrorMessage" xml:space="preserve">
+    <value>Failed to adjust loop data for background music. Please check the logs and file an issue if this reoccurs.</value>
+  </data>
 </root>
