--- a/src/SerialLoops/Assets/Strings.resx
+++ b/src/SerialLoops/Assets/Strings.resx
@@ -3364,4 +3364,194 @@ All hacks have been rolled back to preserve state.</value>
   <data name="TopicEditorHiddenIdHelp" xml:space="preserve">
     <value>All main topics have a second "hidden" ID in addition to their main one. This is displayed for internal accounting and is generally not interesting to you as a user.</value>
   </data>
+  <data name="ScriptCommandVerbHelpAVOID_DISP" xml:space="preserve">
+    <value>Displays the "Main Topic → Avoid" graphics.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpBG_DISP" xml:space="preserve">
+    <value>Displays a background image on the lower screen. The background image can only be of type TEX_BG.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpBG_DISP2" xml:space="preserve">
+    <value>The same as BG_DISP. Use that command instead.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpBG_DISPCG" xml:space="preserve">
+    <value>BG_DISPCG works as BG_DISP but can display a larger variety of textures – namely, TEX_CG, TEX_CG_DUAL_SCREEN, TEX_CG_WIDE, and TEX_CG_SINGLE BGs. Notably, these are all CGs as opposed to VN backgrounds. Before displaying a standard BG after calling BG_DISPCG, one should call BG_REVERT.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpBG_FADE" xml:space="preserve">
+    <value>Like the other BG display commands but crossfades the background rather than just displaying it.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpBG_REVERT" xml:space="preserve">
+    <value>Reverts the background to the last call of BG_DISP (i.e. undoes any BG_FADE or BG_DISPCG calls). This is required before returning to displaying standard TEX_BG BGs. Note that if reverting a TEX_CG_DUAL_SCREEN BG, SET_PLACE must have been used to set the place location and have it displayed.
+
+BG_REVERT does something odd to previously displayed CGs that makes attempting to display them again after the BG_REVERT crash/freeze/soft lock the game. If you need to go back and forth between the same CGs, consider using BG_FADE.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpBG_SCROLL" xml:space="preserve">
+    <value>When a background that is larger than the screen is shown (such as TEX_CG_DUAL_SCREEN, TEX_CG_WIDE, and TEX_CG_SINGLE), scrolls the background in a defined direction.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpBGM_PLAY" xml:space="preserve">
+    <value>Plays or stops background music.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpCHESS_CLEAR_ANNOTATIONS" xml:space="preserve">
+    <value>Clears all chessboard annotations. Unused.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpCHESS_LOAD" xml:space="preserve">
+    <value>Loads a chess file into memory and (if the chess overlay is loaded) places it on the chessboard.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpCHESS_MOVE" xml:space="preserve">
+    <value>Moves a piece (or pieces) on the chessboard.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpCHESS_RESET" xml:space="preserve">
+    <value>Resets the chessboard to its original state.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpCHESS_TOGGLE_CROSS" xml:space="preserve">
+    <value>Crosses out spaces on the chessboard with a red X. If a space is already crossed out, this command uncrosses it out.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpCHESS_TOGGLE_GUIDE" xml:space="preserve">
+    <value>Highlights the potential moves of a piece in red. If a piece has already been highlighted, this command unhighlights it. Optionally, can specify to clear all guides currently on the board.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpCHESS_TOGGLE_HIGHLIGHT" xml:space="preserve">
+    <value>Highlights spaces on the chessboard in yellow. If a space is already highlighted, this command unhighlights it.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpCHESS_VGOTO" xml:space="preserve">
+    <value>Monitors for the end of the chess game and then jumps to a specified script block depending on the outcome.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpCHIBI_EMOTE" xml:space="preserve">
+    <value>This command displays an emote in a speech bubble above a chibi figure on the top screen.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpCHIBI_ENTEREXIT" xml:space="preserve">
+    <value>Specifies a chibi figure to enter or exit the top screen. To be used by this command, a chibi must have a walk cycle (animation 01) in addition to its default idle animation (animation 00).</value>
+  </data>
+  <data name="ScriptCommandVerbHelpCONFETTI" xml:space="preserve">
+    <value>Displays falling confetti on the top screen.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpDIALOGUE" xml:space="preserve">
+    <value>Displays a line of dialogue and/or manipulates character sprites. Can optionally play a voiced line.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpEPHEADER" xml:space="preserve">
+    <value>Sets the upper screen to be an episode title texture.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpFLAG" xml:space="preserve">
+    <value>Sets or clears a flag.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpGLOBAL2D" xml:space="preserve">
+    <value>Sets a global variable to a specified value. Only used in one place so it's difficult to determine what it affects.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpGOTO" xml:space="preserve">
+    <value>Jumps to a particular script section.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpHARUHI_METER" xml:space="preserve">
+    <value>Modifies the value of the Haruhi Meter. The meter minimum is 0 (corresponding to 10%) and the meter maximum is 9 (corresponding to 100%).</value>
+  </data>
+  <data name="ScriptCommandVerbHelpHARUHI_METER_NOSHOW" xml:space="preserve">
+    <value>Adds to the Haruhi Meter without showing the Haruhi Meter UI (the sound effects are still played). Unused in the game.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpHOLD" xml:space="preserve">
+    <value>Stops script execution until input is received from the player.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpINIT_READ_FLAG" xml:space="preserve">
+    <value>Seems to initialize read flags for the current script; however, it's utility is unknown as it is unused in the game.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpINVEST_END" xml:space="preserve">
+    <value>Ends investigation mode and returns to the main visual novel format of the game. Automatically fades screen to black.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpINVEST_START" xml:space="preserve">
+    <value>Starts investigation mode. Automatically clears most of the screen UI and then fades screen out to black and then back in from black.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpITEM_DISPIMG" xml:space="preserve">
+    <value>Displays the specified item image. The item system is entirely unused in the game, so this command goes unused as well.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpKBG_DISP" xml:space="preserve">
+    <value>Displays a particular "kinetic" (my word) background on the top screen. Must be of type KINETIC_SCREEN.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpLOAD_ISOMAP" xml:space="preserve">
+    <value>Loads an isometric map for usage by INVEST_START.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpMODIFY_FRIENDSHIP" xml:space="preserve">
+    <value>Modifies a character's "Friendship Level" by adding a particular value to it. The value can be positive or negative. Friendship levels start at 1, have a max of 64, and persist throughout a playthrough.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpNEXT_SCENE" xml:space="preserve">
+    <value>Ends the scene and moves to the next one as listed in the Scenario item.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpNOOP" xml:space="preserve">
+    <value>Does nothing.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpOP_MODE" xml:space="preserve">
+    <value>Suppresses the top screen UI, shows BG_KBG04 on the top screen, disables dialogue skipping, and marks the center of the screen as the position the Kyon chibi walks to, and sends the Kyon chibi out. Used only in the opening text crawl.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpPALEFFECT" xml:space="preserve">
+    <value>Changes the color of currently displayed UI elements using a specified filter.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpPIN_MNL" xml:space="preserve">
+    <value>Draws a dialogue line as monologue over all other dialogue. Undone by completing a chess game.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpREMOVED" xml:space="preserve">
+    <value>Removed in the final version of the game (not referenced in any scripts.)</value>
+  </data>
+  <data name="ScriptCommandVerbHelpSCENE_GOTO" xml:space="preserve">
+    <value>Goes to a particular scene. Note that this scene cannot be just any script file; it must be contained within the event table.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpSCENE_GOTO_CHESS" xml:space="preserve">
+    <value>Behaves as SCENE_GOTO except that it's used to go to scripts that contain chess puzzles.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpSCREEN_FADEIN" xml:space="preserve">
+    <value>Causes the screen to fade in.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpSCREEN_FADEOUT" xml:space="preserve">
+    <value>Causes the screen to fade out.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpSCREEN_FLASH" xml:space="preserve">
+    <value>Flashes the screen a specified color for a specified amount of time.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpSCREEN_SHAKE" xml:space="preserve">
+    <value>Shakes the bottom screen.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpSCREEN_SHAKE_STOP" xml:space="preserve">
+    <value>Stops screen shaking from a SCREEN_SHAKE command. (Used when the Duration parameter of said SCREEN_SHAKE is set to -1).</value>
+  </data>
+  <data name="ScriptCommandVerbHelpSELECT" xml:space="preserve">
+    <value>Presents the player with a series of choices that branch the dialogue tree. Choices are defined in their own section and have IDs that correspond to labels set in the labels section. When a choice is chosen, this ID is used to select which script block will be jumped to.
+
+SELECT cannot be used in the initial, unnamed script block.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpSET_PLACE" xml:space="preserve">
+    <value>Modifies the displayed place name.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpSKIP_SCENE" xml:space="preserve">
+    <value>Sets up the NEXT_SCENE command to skip a specified number of scenes as defined in the Scenario.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpSND_PLAY" xml:space="preserve">
+    <value>Plays a sound from the SDAT snd.bin.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpSND_STOP" xml:space="preserve">
+    <value>Stops the currently playing sound. Unused in game.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpSTOP" xml:space="preserve">
+    <value>Stops script execution and soft locks the game. Unused.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpTOGGLE_DIALOGUE" xml:space="preserve">
+    <value>Shows/hides the dialogue box. Note that plenty of other commands already do one of these (e.g., DIALOGUE automatically shows the dialogue box).</value>
+  </data>
+  <data name="ScriptCommandVerbHelpTOPIC_GET" xml:space="preserve">
+    <value>Gives the player a particular topic.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpTRANS_OUT" xml:space="preserve">
+    <value>Plays a transition to black.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpTRANS_IN" xml:space="preserve">
+    <value>Plays a transition from black into the scene.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpVCE_PLAY" xml:space="preserve">
+    <value>Plays a voice file.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpVGOTO" xml:space="preserve">
+    <value>Goes to a specified script section if a specified conditional is true.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpWAIT" xml:space="preserve">
+    <value>Waits a particular number of frames.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpWAIT_CANCEL" xml:space="preserve">
+    <value>A command nearly identical to WAIT, but allows for the wait to be canceled with a button press or screen tap.</value>
+  </data>
+  <data name="ScriptCommandVerbHelpBACK" xml:space="preserve">
+    <value>When used in the initial script section, starts execution to the first script block. Otherwise, makes the script return to whatever called it (e.g. the puzzle phase) or returns you to the investigation phase.</value>
+  </data>
 </root>
