Fixup flatpak versioning, commit hash display in version, and update check

--- a/src/SerialLoops/Assets/Strings.resx
+++ b/src/SerialLoops/Assets/Strings.resx
@@ -3690,4 +3690,7 @@ item in the dropdown!</value>
   <data name="ScriptEditorMoveDownTip" xml:space="preserve">
     <value>Move Down</value>
   </data>
+  <data name="AboutDialogVersionString" xml:space="preserve">
+    <value>Version {0}</value><comment>{0} denotes the version of the application as displayed in the about dialog</comment>
+  </data>
 </root>
