--- a/src/SerialLoops/Assets/Strings.it.resx
+++ b/src/SerialLoops/Assets/Strings.it.resx
@@ -1999,7 +1999,7 @@
   <data name="Use Docker for ASM Hacks" xml:space="preserve">
     <value>Usa Docker per ASM Hacks</value>
   </data>
-  <data name="Vorbis files" xml:space="preserve">
+  <data name="OggFiles" xml:space="preserve">
     <value>Vorbis files</value>
   </data>
   <data name="Quicksave data damaged &amp; reset message box" xml:space="preserve">
