--- a/src/SerialLoops/Assets/Strings.it.resx
+++ b/src/SerialLoops/Assets/Strings.it.resx
@@ -2035,7 +2035,7 @@
   <data name="Puzzle Interrupt Scenes Off" xml:space="preserve">
     <value>Scene interrotte Puzzle Off</value>
   </data>
-  <data name="Sprite Exit/Move Transition" xml:space="preserve">
+  <data name="SpritePostCommandTransition" xml:space="preserve">
     <value>Sprite transizione sposta/esci</value>
   </data>
   <data name="Voice" xml:space="preserve">
@@ -2266,7 +2266,7 @@
   <data name="Save progress prompt message box" xml:space="preserve">
     <value>Messaggio prompt salvataggio dati</value>
   </data>
-  <data name="Sprite Entrance Transition" xml:space="preserve">
+  <data name="SpritePreCommandTransition" xml:space="preserve">
     <value>Sprite transizione entrata</value>
   </data>
   <data name="Project not provided to project creation dialog" xml:space="preserve">
