--- a/src/SerialLoops/Assets/Strings.zh-Hans.resx
+++ b/src/SerialLoops/Assets/Strings.zh-Hans.resx
@@ -2071,10 +2071,10 @@
   <data name="Sprite" xml:space="preserve">
     <value>精灵图</value>
   </data>
-  <data name="Sprite Entrance Transition" xml:space="preserve">
+  <data name="SpritePreCommandTransition" xml:space="preserve">
     <value>精灵图进入过渡</value>
   </data>
-  <data name="Sprite Exit/Move Transition" xml:space="preserve">
+  <data name="SpritePostCommandTransition" xml:space="preserve">
     <value>精灵图退出/移动过渡</value>
   </data>
   <data name="Sprite Layer" xml:space="preserve">
